se trabajo con responsive design, se agregaron elemenos de bs

--- a/sass/utilidades/_astro101.scss
+++ b/sass/utilidades/_astro101.scss
@@ -8,6 +8,8 @@
     "jupiter-101 aside"
     "luna-101 aside";
     justify-content: center;
+    background: $color-div;
+    margin-top: 3rem;
     div{
         margin-top: 3rem;
         margin-bottom: 3rem;
