--- a/css/styles.css
+++ b/css/styles.css
@@ -435,7 +435,9 @@ body footer {
   grid-template-columns: 2fr 1fr;
   grid-template-rows: 0.2fr 1fr 1fr 1fr;
   grid-template-areas: "h1 h1" "pluton-101 aside" "jupiter-101 aside" "luna-101 aside";
-  justify-content: center; }
+  justify-content: center;
+  background: linear-gradient(to right, #4e4376, #2b5876);
+  margin-top: 3rem; }
   .main-101 div {
     margin-top: 3rem;
     margin-bottom: 3rem;
@@ -912,21 +914,125 @@ body footer {
     width: 40rem; } }
 
 @media (max-width: 678px) {
-  body .main-talleres .taller-luna, body .main-talleres .taller-ascendente, body .main-talleres .taller-marte, body .main-talleres .taller-venus {
+  body #main-talleres-id .taller-luna, body #main-talleres-id .taller-ascendente, body #main-talleres-id .taller-marte, body #main-talleres-id .taller-venus {
     width: 22rem;
     padding: 4rem; }
-    body .main-talleres .taller-luna p, body .main-talleres .taller-ascendente p, body .main-talleres .taller-marte p, body .main-talleres .taller-venus p {
+    body #main-talleres-id .taller-luna p, body #main-talleres-id .taller-ascendente p, body #main-talleres-id .taller-marte p, body #main-talleres-id .taller-venus p {
       width: 15rem; }
-  body .main-talleres .taller-venus img {
+  body #main-talleres-id .taller-venus img {
     display: none; } }
 
 @media (max-width: 768px) {
-  .body .main-talleres .taller-luna, .body .main-talleres .taller-ascendente, .body .main-talleres .taller-marte, .body .main-talleres .taller-venus {
-    width: 30rem;
-    padding: 3rem; }
-  .body .main-talleres .taller-luna {
-    width: 30rem;
-    padding: 3rem; } }
+  body .main-talleres {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: none;
+    color: white; }
+    body .main-talleres div {
+      transition: transform 0.5s;
+      display: flex;
+      justify-content: space-between;
+      align-items: center; }
+      body .main-talleres div .luna-titulo, body .main-talleres div .ascendente-titulo, body .main-talleres div .marte-titulo, body .main-talleres div .venus-titulo {
+        flex-direction: column; }
+        body .main-talleres div .luna-titulo p, body .main-talleres div .ascendente-titulo p, body .main-talleres div .marte-titulo p, body .main-talleres div .venus-titulo p {
+          width: 30rem;
+          text-align: center; }
+    body .main-talleres div:hover {
+      transform: scale(1.1); }
+    body .main-talleres h2 {
+      margin-bottom: 3rem; }
+    body .main-talleres .taller-luna {
+      margin-top: 3rem;
+      margin-bottom: 3rem;
+      background: linear-gradient(to right, #4e4376, #2b5876);
+      width: 40rem;
+      text-align: center;
+      padding: 5rem; }
+    body .main-talleres .taller-ascendente {
+      margin-top: 3rem;
+      margin-bottom: 3rem;
+      background: linear-gradient(to right, #4e4376, #2b5876);
+      width: 40rem;
+      text-align: center;
+      padding: 5rem; }
+    body .main-talleres .taller-marte {
+      margin-top: 3rem;
+      margin-bottom: 3rem;
+      background: linear-gradient(to right, #4e4376, #2b5876);
+      width: 40rem;
+      text-align: center;
+      padding: 5rem; }
+    body .main-talleres .taller-venus {
+      margin-top: 3rem;
+      margin-bottom: 3rem;
+      background: linear-gradient(to right, #4e4376, #2b5876);
+      width: 40rem;
+      padding: 5rem; }
+      body .main-talleres .taller-venus img {
+        width: 20rem;
+        margin-right: 5rem;
+        display: none; } }
+
+@media (max-width: 678px) {
+  body #main-101-id {
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
+    body #main-101-id div {
+      margin-top: 2rem;
+      margin-bottom: 2rem;
+      padding: 0rem; }
+    body #main-101-id .dropdown .btn {
+      flex-direction: row;
+      justify-content: flex-start; }
+    body #main-101-id h1 {
+      font-size: 1.5rem;
+      text-align: center;
+      margin-left: 0; }
+    body #main-101-id .aside {
+      display: none; }
+      body #main-101-id .aside ul {
+        display: flex;
+        flex-direction: row; }
+        body #main-101-id .aside ul li {
+          margin: 0.5rem;
+          text-align: center;
+          margin-left: 0; }
+    body #main-101-id .pluton-101, body #main-101-id .jupiter-101, body #main-101-id .luna-101 {
+      flex-direction: column;
+      align-content: center; }
+      body #main-101-id .pluton-101 h2, body #main-101-id .jupiter-101 h2, body #main-101-id .luna-101 h2 {
+        width: 20rem; }
+      body #main-101-id .pluton-101 img, body #main-101-id .jupiter-101 img, body #main-101-id .luna-101 img {
+        width: 20rem; }
+      body #main-101-id .pluton-101 p, body #main-101-id .jupiter-101 p, body #main-101-id .luna-101 p {
+        width: 20rem; } }
+
+@media (max-width: 768px) {
+  body .main-101 {
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
+    body .main-101 .aside {
+      display: none; }
+      body .main-101 .aside ul {
+        display: flex;
+        flex-direction: row; }
+        body .main-101 .aside ul li {
+          margin: 0.5rem;
+          text-align: center;
+          margin-left: 0; }
+    body .main-101 .pluton-101, body .main-101 .jupiter-101, body .main-101 .luna-101 {
+      flex-direction: column;
+      align-content: center; }
+      body .main-101 .pluton-101 h2, body .main-101 .jupiter-101 h2, body .main-101 .luna-101 h2 {
+        width: 30rem; }
+      body .main-101 .pluton-101 img, body .main-101 .jupiter-101 img, body .main-101 .luna-101 img {
+        width: 35rem; }
+      body .main-101 .pluton-101 p, body .main-101 .jupiter-101 p, body .main-101 .luna-101 p {
+        width: 30rem; } }
 
 * {
   margin: 0;
