--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -8,6 +8,7 @@
 @import "utilidades/cartanatal";
 @import "utilidades/talleres";
 @import "utilidades/astro101";
+@import "utilidades/pluton";
 @import "utilidades/blog";
 
 //mq
