--- a/sass/utilidades/_index.scss
+++ b/sass/utilidades/_index.scss
@@ -1,4 +1,14 @@
 body{
+    h1, h2, h3, h4, h5{
+        color: $color-h1;
+        margin-top: 1rem;
+        font-family: 'Source Sans Pro', sans-serif;
+    }
+    p{
+        font-family: 'Hanken Grotesk', sans-serif;
+    }
+}
+body{
     video{
         position: fixed;
         min-width: 100%;
@@ -79,6 +89,7 @@ body{
                 margin-top: 1.5rem;
                 margin-left: 3rem;
                 margin-right: 3rem;
+                font-family: 'Hanken Grotesk', sans-serif;
             }
             .mano{ 
                 width: 30rem;
@@ -112,7 +123,8 @@ section{
             text-align: center;
             color: white;
             margin-bottom: 4rem;
-            width: 60rem;
+            margin-top: 1.5rem;
+            width: 50rem;
         }
         a{
             text-decoration: none;
